--- a/domain/flarelab/sample.html
+++ b/domain/flarelab/sample.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <button id="clickMe">clickMe</button>
-    <script src="./cb.js"></script>
+    <script src="./9FunctionStatement.js"></script>
 </body>
 </html>
