--- a/domain/index.html
+++ b/domain/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="clickMe">clickMe</button>
-    <!-- <script src="./cb.js"></script> -->
-    <script src="./promise.js"></script>
+    
 </body>
+<script src="proxyObj.js"></script>
 </html>
