npm and event loop

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div id="outer">
     <div id="middle">
         <div id="inner">Click me!</div>
+        <iframe src="sample.html" of the web page to embed” ></iframe>
     </div>
 </div>
 
