--- a/learnReact/tailwind/public/index.html
+++ b/learnReact/tailwind/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="text-yellow-400">
     <div><!-- content wrapper -->
         <div>
             <nav>
@@ -16,7 +16,7 @@
                     </h1>
                 </div>
                 <ul>
-                    <li>
+                    <li class="text-yellow-400">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -66,6 +66,7 @@
 
                 <div>
                     <div>Load more </div>
+                    hai
                 </div>
 
             </div>
